--- a/src/app/components/musica/musica.component.html
+++ b/src/app/components/musica/musica.component.html
@@ -1,3 +1,4 @@
 <nav class="navbar navbar-light" style="background-color: #cc00ffa1">
   <a class="navbar-brand" href="/">Ranking Songs</a>
 </nav>
+<app-search></app-search>
