--- a/src/app/components/musica/search/artist/artist.component.html
+++ b/src/app/components/musica/search/artist/artist.component.html
@@ -1,12 +1,12 @@
-<div class="form-group">
+<!-- <div class="form-group">
   <input type="text" class="form-control" name="searchStr" [(ngModel)]="searchStr" placeholder="Buscar tu artista ">
 </div>
 <div class="form-group">
   <button class="btn btn-primary" type="submit">
     <i class="fas fa-search"></i> Buscar
   </button>
-  <!-- Necesito reseterar el servicio  -->
+
   <button class="btn btn-secondary" type="reset" (click)="reset()">
     <i class="fas fa-sync-alt"></i> Reset
   </button>
-</div>
+</div> -->
