--- a/src/app/components/musica/search/search.component.html
+++ b/src/app/components/musica/search/search.component.html
@@ -1,11 +1,21 @@
 <div class="container"> 
     <h2>Busca a tu artista </h2>
-
     <div class="card mt-5">
       <div class="card-body">
         <!--Cuando damos click en buscar ejecutamos la funcion buscar  -->
         <form (ngSubmit)="searchMusic()">
-          <app-artist></app-artist>
+          <div class="form-group">
+            <input type="text" class="form-control" name="searchStr" [(ngModel)]="searchStr" placeholder="Buscar tu artista ">
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary" type="submit">
+              <i class="fas fa-search"></i> Buscar
+            </button>
+            <!-- Necesito reseterar el servicio  -->
+            <button class="btn btn-secondary" type="reset" (click)="reset()">
+              <i class="fas fa-sync-alt"></i> Reset
+            </button>
+          </div>
         </form>
       </div>
     </div>
