--- a/src/app/components/musica/musica.component.html
+++ b/src/app/components/musica/musica.component.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="container" *ngIf="searchResult">
-    <h1>Top 10 de tu artista</h1>
+    <h1>Los Top 10 de tu artista</h1>
     <table class="table">
       <thead class="thead-dark" ng-controller="votesController">
         <tr>
